@@ -2,7 +2,9 @@ package com.pth.iflow.profile.service;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
-import java.net.URL;
+
+import java.net.URI;
+
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
@@ -27,10 +29,10 @@ import com.pth.iflow.profile.service.impl.CompanyService;
 @AutoConfigureMockMvc
 public class CompanyServiceTest extends TestDataProducer {
 
-  private ICompanyService companyService;
+  private ICompanyService                       companyService;
 
   @Mock
-  private IProfileRestTemplateCall restTemplate;
+  private IProfileRestTemplateCall              restTemplate;
 
   @MockBean
   private ProfileConfiguration.CoreAccessConfig coreAccessConfig;
@@ -39,7 +41,7 @@ public class CompanyServiceTest extends TestDataProducer {
   public void setUp() throws Exception {
     this.companyService = new CompanyService(this.restTemplate, this.coreAccessConfig);
 
-    when(this.coreAccessConfig.prepareCoreUrl(any(String.class))).thenReturn(new URL("http://any-string"));
+    when(this.coreAccessConfig.prepareCoreUrl(any(URI.class))).thenReturn(new URI("http://any-string"));
 
   }
 
@@ -50,19 +52,18 @@ public class CompanyServiceTest extends TestDataProducer {
   @Test
   public void testGetUserById() throws Exception {
 
-    final Company company = getTestCompany();
+    final Company company = this.getTestCompany();
     final CompanyEdo companyEdo = ProfileModelEdoMapper.toEdo(company);
 
     when(this.restTemplate.callRestGet(any(String.class), any(EModule.class), any(Class.class), any(boolean.class), any()))
-                                                                                                                           .thenReturn(companyEdo);
+        .thenReturn(companyEdo);
 
     final Company resCompany = this.companyService.getById(company.getId());
 
     Assert.assertNotNull("Result company is not null!", resCompany);
     Assert.assertEquals("Result company has id 1!", resCompany.getId(), company.getId());
-    Assert.assertEquals("Result company has name '" + company.getCompanyName() + "'!",
-                        resCompany.getCompanyName(),
-                        company.getCompanyName());
+    Assert.assertEquals("Result company has name '" + company.getCompanyName() + "'!", resCompany.getCompanyName(),
+        company.getCompanyName());
     Assert.assertEquals("Result company has status 1!", resCompany.getStatus(), company.getStatus());
 
   }
