@@ -3,8 +3,10 @@ package com.pth.iflow.profile.service;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
-import java.net.URL;
+
+import java.net.URI;
 import java.util.List;
+
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
@@ -30,10 +32,10 @@ import com.pth.iflow.profile.service.impl.DepartmentService;
 @AutoConfigureMockMvc
 public class DepartmentServiceTest extends TestDataProducer {
 
-  private IDepartmentService departmentService;
+  private IDepartmentService                    departmentService;
 
   @Mock
-  private IProfileRestTemplateCall restTemplate;
+  private IProfileRestTemplateCall              restTemplate;
 
   @MockBean
   private ProfileConfiguration.CoreAccessConfig coreAccessConfig;
@@ -42,7 +44,7 @@ public class DepartmentServiceTest extends TestDataProducer {
   public void setUp() throws Exception {
     this.departmentService = new DepartmentService(this.restTemplate, this.coreAccessConfig);
 
-    when(this.coreAccessConfig.prepareCoreUrl(any(String.class))).thenReturn(new URL("http://any-string"));
+    when(this.coreAccessConfig.prepareCoreUrl(any(URI.class))).thenReturn(new URI("http://any-string"));
 
   }
 
@@ -57,15 +59,14 @@ public class DepartmentServiceTest extends TestDataProducer {
     final DepartmentEdo departmentEdo = ProfileModelEdoMapper.toEdo(department);
 
     when(this.restTemplate.callRestGet(any(String.class), any(EModule.class), any(Class.class), any(boolean.class), any()))
-                                                                                                                           .thenReturn(departmentEdo);
+        .thenReturn(departmentEdo);
 
     final Department resDepartment = this.departmentService.getById(department.getId());
 
     Assert.assertNotNull("Result department is not null!", resDepartment);
     Assert.assertEquals("Result department has id 1!", resDepartment.getId(), department.getId());
-    Assert.assertEquals("Result department has title '" + department.getTitle() + "'!",
-                        resDepartment.getTitle(),
-                        department.getTitle());
+    Assert.assertEquals("Result department has title '" + department.getTitle() + "'!", resDepartment.getTitle(),
+        department.getTitle());
     Assert.assertEquals("Result department has status 1!", resDepartment.getStatus(), department.getStatus());
 
   }
@@ -77,7 +78,7 @@ public class DepartmentServiceTest extends TestDataProducer {
     final DepartmentListEdo listEdo = new DepartmentListEdo(ProfileModelEdoMapper.toDepartmentEdoList(list));
 
     when(this.restTemplate.callRestGet(any(String.class), any(EModule.class), eq(DepartmentListEdo.class), any(boolean.class), any()))
-                                                                                                                                      .thenReturn(listEdo);
+        .thenReturn(listEdo);
 
     final List<Department> resList = this.departmentService.getListByCompanyId(1L);
 
